added_speakai_javafx_compileplugin